--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/domwoe/cirql-backend",
   "dependencies": {
     "bunyan": "^1.0.0",
-    "firebase": "^1.0.19"
+    "firebase": "^1.0.19",
+    "moment-timezone": "^0.2.1"
   }
 }
