--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "bunyan": "^1.0.0",
     "firebase": "^1.0.19",
-    "moment-timezone": "^0.2.1"
+    "moment-timezone": "^0.2.1",
+    "underscore": "^1.6.0"
   }
 }
