--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bunyan": "^1.0.0",
     "firebase": "^1.0.19",
     "moment-timezone": "^0.2.1",
+    "requestretry": "^1.0.4",
     "underscore": "^1.6.0"
   }
 }
