--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   "homepage": "https://github.com/domwoe/cirql-backend",
   "dependencies": {
     "bunyan": "^1.0.0",
+    "bunyan-logentries": "^0.1.0",
     "firebase": "^1.0.19",
     "moment-timezone": "^0.2.1",
+    "node-logentries": "^0.1.4",
     "requestretry": "^1.0.4",
     "underscore": "^1.6.0"
   }
