--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "googlemaps": "^0.1.20",
     "moment-timezone": "^0.2.1",
     "node-logentries": "^0.1.4",
+    "request": "2.49.0",
     "requestretry": "^1.0.4",
     "underscore": "^1.6.0"
   }
