--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "googlemaps": "^0.1.20",
     "moment-timezone": "^0.2.1",
     "node-logentries": "^0.1.4",
+    "pg": "^4.2.0",
     "request": "2.51.0",
     "requestretry": "^1.0.4",
+    "sql": "^0.45.2",
     "underscore": "^1.6.0"
   }
 }
