--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "googlemaps": "^0.1.20",
     "moment-timezone": "^0.2.1",
     "node-logentries": "^0.1.4",
+    "nodetime": "^0.8.15",
     "pg": "^4.2.0",
     "request": "2.51.0",
     "requestretry": "^1.0.4",
