--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "firebase": "^1.0.19",
     "geolib": "^2.0.14",
     "googlemaps": "^0.1.20",
+    "linkedlist": "^1.0.1",
     "moment-timezone": "^0.2.1",
     "node-logentries": "^0.1.4",
     "nodetime": "^0.8.15",
