--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
   },
   "homepage": "https://github.com/domwoe/cirql-backend",
   "dependencies": {
+    "apn": "^1.7.3",
     "bunyan": "^1.0.0",
     "bunyan-logentries": "^0.1.0",
     "firebase": "^1.0.19",
     "geolib": "^2.0.14",
     "googlemaps": "^0.1.20",
     "moment-timezone": "^0.2.1",
+    "node-gcm": "^0.9.15",
     "node-logentries": "^0.1.4",
     "nodetime": "^0.8.15",
     "pg": "^4.2.0",
